--- a/src/components/topBar/topbar.css
+++ b/src/components/topBar/topbar.css
@@ -66,7 +66,7 @@
     display: flex;
 }
 
-.topBarItem{
+.topBarIconItem{
     margin-right: 15px;
     cursor: pointer;
     position: relative;
@@ -76,16 +76,23 @@
     width: 15px;
     height: 15px;
     background-color: red;
+    
     border-radius: 50%;
     color: white;
     position: absolute;
     top: -5px;
-    
+    right: -8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
 }
 
 .profilePicture{
     width: 38px;
     height: 40px;
-    border-radius: 30px;
+    border-radius: 50%;
+    object-fit: cover;
+    cursor: pointer;
 
 }
