--- a/src/components/feed/feed.css
+++ b/src/components/feed/feed.css
@@ -1,6 +1,30 @@
+body {
+    margin: 0;
+    padding: 0;
+    position: relative; 
+    height: 100vh; 
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('Warhammerbackground.jpg'); 
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; ;
+    opacity: 0.5; 
+    z-index: -1; 
+    background-attachment: fixed;
+
+}
+
 .feed{
     flex: 6;
-    
+
 }
 
 .postspace{
