--- a/src/components/topBar/topbar.css
+++ b/src/components/topBar/topbar.css
@@ -1,7 +1,7 @@
 .topBarContainer{
     height: 50px;
     width: 100%;
-    background-color: #623da1;
+    background-color: #000000;
     display: flex;
     align-items: center;
     position: sticky;
