--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -1,10 +1,10 @@
-.sidebar{
+.sidebar {
     flex: 3;
-    height: calc(100vh-50px);
-    
+    height: calc(100vh - 50px); 
+    position: sticky; 
+    top: 50px; 
+    overflow-y: auto; 
 }
-
-
 
 .sidebarWrapper{
     padding: 20px;
