--- a/src/components/feed/feed.css
+++ b/src/components/feed/feed.css
@@ -1,32 +1,30 @@
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
     position: relative; 
-    height: 100vh; 
 }
 
 body::before {
     content: '';
-    position: absolute;
+    position: fixed; 
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('Warhammerbackground.jpg'); 
+    background-image: url('Warhammerbackground.jpg');
     background-size: cover; 
     background-position: center; 
-    background-repeat: no-repeat; ;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
     opacity: 0.5; 
-    z-index: -1; 
-    background-attachment: fixed;
-
+    z-index: -1;
 }
 
-.feed{
+.feed {
     flex: 6;
-
 }
 
-.postspace{
-    
+.postspace {
+    /* Add styles for the postspace if needed */
 }
